# Tools

./: .gitignore  README.md
data/: testreclist
dev-utils/SampleBuilder/: Makefile
dev-utils/Trainer/: ann_cost.m  ann_predict.m  ann_train.m  sigmoid.m  sigmoidgrad.m
src/: CMakeLists.txt  Commons.h  Misc.c
src/Context2Oct/: main.c
src/EditRUDB/: main.c
src/GenRUDB/: Common.h  GenUnit.c  GenUnit.h  main.c  man.pod
src/GenRoto/: main.c
src/PrecompDiff/: main.c
src/ProbeRUDB/: main.c
src/RSegment/: main.c
src/RUDB2Oct/: main.c
src/Roto2Oto/: main.c  man.pod
src/Utau2Rec/: main.c
src/WavNorm/: main.c  man.pod
